--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "myclabs/php-enum": "^1.8"
   },
   "require-dev": {
-    "phpunit/phpunit": "9.0"
+    "phpunit/phpunit": "^9.0"
   },
   "autoload": {
     "psr-4": {
